--- a/package.json
+++ b/package.json
@@ -12,5 +12,35 @@
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "svelte": "^4.2.18",
     "vite": "^5.4.1"
-  }
+  },
+  "description": "This template should help get you started developing with Svelte in Vite.",
+  "main": "svelte.config.js",
+  "dependencies": {
+    "acorn": "^8.12.1",
+    "aria-query": "^5.3.2",
+    "axobject-query": "^4.1.0",
+    "code-red": "^1.0.4",
+    "css-tree": "^2.3.1",
+    "debug": "^4.3.7",
+    "deepmerge": "^4.3.1",
+    "esbuild": "^0.21.5",
+    "estree-walker": "^3.0.3",
+    "is-reference": "^3.0.2",
+    "kleur": "^4.1.5",
+    "locate-character": "^3.0.0",
+    "magic-string": "^0.30.11",
+    "mdn-data": "^2.0.30",
+    "ms": "^2.1.3",
+    "nanoid": "^3.3.7",
+    "periscopic": "^3.1.0",
+    "picocolors": "^1.1.0",
+    "postcss": "^8.4.47",
+    "rollup": "^4.22.5",
+    "source-map-js": "^1.2.1",
+    "svelte-hmr": "^0.16.0",
+    "vitefu": "^0.2.5"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
