--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
     "svelte": "^4.2.18",
+    "tailwindcss": "^3.4.14",
     "vite": "^5.4.1"
   },
   "description": "This template should help get you started developing with Svelte in Vite.",
@@ -34,7 +37,6 @@
     "nanoid": "^3.3.7",
     "periscopic": "^3.1.0",
     "picocolors": "^1.1.0",
-    "postcss": "^8.4.47",
     "rollup": "^4.22.5",
     "source-map-js": "^1.2.1",
     "svelte-hmr": "^0.16.0",
