--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "rollup": "^4.22.5",
     "source-map-js": "^1.2.1",
     "svelte-hmr": "^0.16.0",
+    "svelte-modals": "^1.3.0",
     "vitefu": "^0.2.5"
   },
   "keywords": [],
