--- a/back/package.json
+++ b/back/package.json
@@ -12,7 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.0",
-    "mongoose": "^8.7.3"
+    "express": "^4.21.1",
+    "mongoose": "^8.7.3",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
