--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "source-map-js": "^1.2.1",
     "svelte-hmr": "^0.16.0",
     "svelte-modals": "^1.3.0",
+    "ts-node": "^10.9.2",
     "vitefu": "^0.2.5"
   },
   "keywords": [],
