--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "deepmerge": "^4.3.1",
     "esbuild": "^0.21.5",
     "estree-walker": "^3.0.3",
+    "express": "^4.21.1",
     "is-reference": "^3.0.2",
     "kleur": "^4.1.5",
     "locate-character": "^3.0.0",
@@ -35,6 +36,7 @@
     "mdn-data": "^2.0.30",
     "ms": "^2.1.3",
     "nanoid": "^3.3.7",
+    "path": "^0.12.7",
     "periscopic": "^3.1.0",
     "picocolors": "^1.1.0",
     "rollup": "^4.22.5",
