--- a/back/package.json
+++ b/back/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "mongodb": "^6.11.0",
     "mongoose": "^8.7.3",
     "path": "^0.12.7"
   },
