--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "aria-query": "^5.3.2",
     "axobject-query": "^4.1.0",
     "code-red": "^1.0.4",
+    "cors": "^2.8.5",
     "css-tree": "^2.3.1",
     "debug": "^4.3.7",
     "deepmerge": "^4.3.1",
@@ -34,6 +35,7 @@
     "locate-character": "^3.0.0",
     "magic-string": "^0.30.11",
     "mdn-data": "^2.0.30",
+    "mongodb": "^6.11.0",
     "ms": "^2.1.3",
     "nanoid": "^3.3.7",
     "path": "^0.12.7",
